--- a/keno-mongodeployment.yaml
+++ b/keno-mongodeployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: keno-nginx-deployment
+  name: keno-mongo-deployment
   labels:
-    app: nginx
+    app: mongo
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
-      app: nginx
+      app: db
   template:
     metadata:
       labels:
-        app: nginx
+        app: db
     spec:
       containers:
-      - name: nginx
-        image: nginx
+      - name: mongo
+        image: mongo
         ports:
         - containerPort: 80
